   - Replaced validation of parameters with validators. We have an integer
     and a regex validator for now. Plans is to also have one for addr and
     libtld (i.e. domain names, emails.)
  * Added missing BOOST dependency in the CMakeLists.txt.
  * Added an ./mk script to recompile quickly.
  * Added a coverage script.
  * Added in=C++ to the MAPPING_EXTENSION (Doxygen).

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 13 May 2019 00:03:40 -0800

advgetopt (1.1.15.0~xenial) xenial; urgency=high

  * Moved the CMAKE_MODULE_PATH change to the main CMakeLists.txt.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 22 Apr 2019 01:58:52 -0800

advgetopt (1.1.14.1~xenial) xenial; urgency=high

  * Bump version to get a recompile on launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 27 Jul 2018 00:45:54 -0800

advgetopt (1.1.14.0~xenial) xenial; urgency=high

  * Made code -Weffc++ compatible.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 25 Jul 2018 14:31:25 -0800

advgetopt (1.1.13.3~xenial) xenial; urgency=high

  * Bump version to recompile without the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Wed, 27 Jun 2018 19:46:10 -0800

advgetopt (1.1.13.2~xenial) xenial; urgency=high

  * Bump version to recompile with the -fsanitizer flags.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 26 Jun 2018 20:03:27 -0800

advgetopt (1.1.13.1~xenial) xenial; urgency=high

  * Fixed the protocol to the snapwebsites.org.

 -- Alexis Wilke <alexis@m2osw.com>  Thu,  8 Feb 2018 00:57:05 -0800

advgetopt (1.1.13.0~xenial) xenial; urgency=high

  * Bumped the copyright notice to 2018.
  * Fixed up the README.md file.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 28 Jan 2018 23:58:58 -0800

advgetopt (1.1.12.0~xenial) xenial; urgency=high

  * Fix to the .cmake file to prevent the addition of advgetopt/ in the include
    path.

 -- Alexis Wilke <alexis@m2osw.com>  Sun,  8 Jan 2018 17:16:48 -0800

advgetopt (1.1.11.0~xenial) xenial; urgency=high

  * Upload to PPA.
